--- a/package.json
+++ b/package.json
@@ -1,70 +1,46 @@
 {
-  "name": "vue-dom",
-  "version": "0.8.0",
-  "description": "Vue-dom is a VueJS front end for home automation software (Jeedom, ...)",
-  "keywords": [
-    "Home Automation",
-    "VueJS",
-    "Jeedom"
-  ],
-  "author": {
-    "name": "nioc",
-    "email": "dev@nioc.eu"
-  },
-  "homepage": "https://github.com/nioc/vue-dom",
-  "bugs": {
-    "url": "https://github.com/nioc/vue-dom/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/nioc/vue-dom.git"
-  },
-  "license": "AGPL-3.0-or-later",
-  "private": true,
-  "vueDom": {
-    "name": "VueDom",
-    "description": "<p><b>VueDom</b> est un client web pour solution domotique (actuellement compatible avec <a href='https://www.jeedom.com' target='_blank' rel='noreferrer'>Jeedom</a>).</p><p>Il s'appuie sur les composants open-sources suivants :</p><ul><li>VueJS</li><li>Bulma</li></ul><p>En cas de problème ou pour toute suggestion, merci de créer un <a href='https://github.com/nioc/vue-dom/issues' target='_blank' rel='noreferrer'>ticket</a>.</p>",
-    "latestReleaseUrl": "https://api.github.com/repos/nioc/vue-dom/releases/latest"
-  },
-  "scripts": {
-    "dev": "vite --host 0.0.0.0",
-    "build": "vite build",
-    "preview": "vite build && vite preview --port 8080",
-    "lint": "eslint . --ext .vue,.js  --ignore-path .gitignore",
-    "lint-fix": "eslint . --ext .vue,.js --fix --ignore-path .gitignore"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.4",
-    "@oruga-ui/oruga-next": "^0.5.5",
-    "@oruga-ui/theme-bulma": "^0.2.6",
-    "axios": "^1.2.2",
-    "bulma": "^0.9.4",
-    "chart.js": "^4.2.0",
-    "chartjs-adapter-date-fns": "^3.0.0",
-    "date-fns": "^2.28.0",
-    "lodash.clonedeep": "^4.5.0",
-    "normalizr": "^3.6.1",
-    "pinia": "^2.0.14",
-    "pinia-plugin-persistedstate": "^3.0.2",
-    "spdx-license-list": "^6.6.0",
-    "tinyduration": "^3.2.2",
-    "ua-parser-js": "^1.0.33",
-    "video.js": "^7.19.2",
-    "vue": "^3.2.45",
-    "vue-router": "^4.0.16",
-    "vuedraggable": "^4.1.0"
-  },
-  "devDependencies": {
-    "@types/lodash.clonedeep": "^4.5.7",
-    "@types/ua-parser-js": "^0.7.36",
-    "@types/video.js": "^7.3.50",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "eslint": "^8.31.0",
-    "eslint-plugin-vue": "^9.1.1",
-    "rollup-plugin-visualizer": "^5.9.0",
-    "sass": "^1.53.0",
-    "vite": "^4.0.4",
-    "vite-plugin-git-revision": "^0.1.9",
-    "vite-plugin-pwa": "^0.14.1"
-  }
+	"name": "vdo",
+	"version": "0.8.0",
+	"private": true,
+	"scripts": {
+		"dev": "vite --host 0.0.0.0 --port 80",
+		"build": "vite build",
+		"preview": "vite build && vite preview --port 8080",
+		"lint": "eslint . --ext .vue,.js  --ignore-path .gitignore",
+		"lint-fix": "eslint . --ext .vue,.js --fix --ignore-path .gitignore"
+	},
+	"dependencies": {
+		"@fortawesome/fontawesome-free": "^5.15.4",
+		"@oruga-ui/oruga-next": "^0.5.5",
+		"@oruga-ui/theme-bulma": "^0.2.6",
+		"axios": "^1.2.2",
+		"bulma": "^0.9.4",
+		"chart.js": "^4.2.0",
+		"chartjs-adapter-date-fns": "^3.0.0",
+		"date-fns": "^2.28.0",
+		"lodash.clonedeep": "^4.5.0",
+		"normalizr": "^3.6.1",
+		"pinia": "^2.0.14",
+		"pinia-plugin-persistedstate": "^3.0.2",
+		"spdx-license-list": "^6.6.0",
+		"tinyduration": "^3.2.2",
+		"ua-parser-js": "^1.0.33",
+		"video.js": "^7.19.2",
+		"vue": "^3.2.45",
+		"vue-router": "^4.0.16",
+		"vuedraggable": "^4.1.0"
+	},
+	"devDependencies": {
+		"@types/lodash.clonedeep": "^4.5.7",
+		"@types/ua-parser-js": "^0.7.36",
+		"@types/video.js": "^7.3.50",
+		"@vitejs/plugin-vue": "^4.0.0",
+		"eslint": "^8.31.0",
+		"eslint-plugin-vue": "^9.1.1",
+		"rollup-plugin-visualizer": "^5.9.0",
+		"sass": "^1.53.0",
+		"vite": "^4.0.4",
+		"vite-plugin-git-revision": "^0.1.9",
+		"vite-plugin-pwa": "^0.14.1"
+	}
 }
